# D_sakiko

./: .gitignore  AGENTS.md  API_Choice.json  CONTEXT.md  D_sakiko_WebUI设计方案.md  README.md  audio_generator.py  audio_shiyan.py  character.py  dp_local2.py  dsakiko_config.json  dsakiko_configuration.py  emotion_detect.py  gpt_sovits_install.ps1  gpt_sovits_install.sh  if_delete_audio_cache.txt  inference_cli.py  inference_emotion_detect.py  inference_webui.py  install_macos.command  live2d_module.py  main2.py  package.json  pyproject.toml  qdrant_final_schema_spec.md  qdrant_test.py  qtUI.py  run.bat  run_macos.command  wrangler.toml  启动参数配置.bat  启动参数配置.command  安装程序.command  执行更新.bat  执行更新.command  文案.docx  聊天记录注意事项！.txt  运行Live2D模型下载器.bat  运行live2d下载器.command  运行动作组编辑程序.bat  (+3 more)
.github/issue_template/: bug_report.yml  config.yml
.github/workflows/: build_live2d_pyd.yml  build_pyopenjtalk_wheel_macos_arm64.yml  build_wheel_macos_arm64.yml  doc-website.yml  publish_update_release.yml  publish_update_smoke_prerelease.yml
GPT_SoVITS/: audio_generator.py  character.py  config.py  dp_local2.py  dp_local_multi_char.py  dsakiko_configuration.py  emotion_detect.py  emotion_enum.py  inference_cli.py  inference_emotion_detect.py  inference_webui.py  input_commands.py  live2d_1.pyd  live2d_1_generate.py  live2d_downloader_ui.py  live2d_layout.py  live2d_module.py  live2d_runtime_adapter.py  live2d_viewer.py  llm_model_utils.py  log.py  main2.py  multi_char_live2d_module.py  multi_char_main.py  qconfig.py  qtUI.py  setup_live2d.py  sv.py  ui_constants.py  utils.py  voice_detect.py
GPT_SoVITS/AR/: __init__.py
GPT_SoVITS/TTS_infer_pack/: TTS.py  TextPreprocessor.py
GPT_SoVITS/chat/: __init__.py  attachments.py  chat.py  chat_meta.py  image_upload.py  model_context_overrides.json  model_token_usage.py  reminder_manager.py  rolling_summary.py  tool_calling.py
GPT_SoVITS/chat_flow/: __init__.py  audio_scheduler.py  audio_synthesizer.py  controller.py  dispatcher.py  events.py  live2d_client.py  state_updater.py  tool_context.py  turn_runner.py
GPT_SoVITS/components/: custom_setting_area.py  gpt_sovits_area.py  llm_api_area.py
GPT_SoVITS/deepseek_prompt_cache_debug/: __init__.py  debugger.py
GPT_SoVITS/feature_extractor/: __init__.py  cnhubert.py  whisper_enc.py
GPT_SoVITS/live2d_download/: API文档.md  __init__.py  asset_cache.py  bestdori_client.py  cache.py  live2d_downloader.py  live2d_service.py  models.py
GPT_SoVITS/live2d_support/: __init__.py  expression_policy.py  layout.py  model_importer.py  model_normalizer.py  motion_capabilities.py  motion_selection.py  motion_semantics.py  runtime_adapter.py  runtime_window.py
GPT_SoVITS/llm_provider/: modelscope.py
GPT_SoVITS/module/: __init__.py  attentions.py  attentions_onnx.py  commons.py  core_vq.py  data_utils.py  ddp_utils.py  distrib.py  losses.py  mel_processing.py  models.py  models_onnx.py  modules.py  mrte_model.py  quantize.py  transforms.py
GPT_SoVITS/rag/: character_resolver.py  context_builder.py  llm_integration.py  models.py  prompt_formatter.py  qdrant_schema_plan.md  qdrant_service_plan.md  services.py
GPT_SoVITS/repair/: __init__.py  repair_checker.py  repair_launcher.py  repair_manifest.py  repair_paths.py  repair_security.py
GPT_SoVITS/templates/: single_character.jinja
GPT_SoVITS/test/: benchmark_audio_generator_model_switch.py  benchmark_tts_loading.py  test_audio_generator_sync_entrypoint.py  test_audio_pronunciation_overrides.py  test_audio_scheduler.py  test_character_resolver.py  test_character_voice_config.py  test_chat.py  test_chat_audio_synthesizer.py  test_chat_backup_ui.py  test_chat_display_transient.py  test_chat_flow_controller.py  test_chat_flow_events.py  test_context_builder.py  test_context_usage_indicator.py  test_conversation_state_updater.py  test_custom_bgm_handling.py  test_dp_local2_chat_flow_events.py  test_dp_local2_json_output.py  test_dp_local2_prompt_cache.py  test_emotion_enum.py  test_float_range_setting_card.py  test_live2d_client.py  test_live2d_model3_normalization.py  test_live2d_model_importer.py  test_live2d_motion_semantics.py  test_live2d_runtime_policies.py  test_live2d_runtime_window.py  test_llm_integration.py  test_main2_stage_two_composition.py  test_main_response_dispatcher.py  test_message_input.py  test_model_token_usage.py  test_modelscope_rate_limit.py  test_prompt_formatter.py  test_prompt_package_pipeline.py  test_qtui_chat_flow_events.py  test_rag_annotation_migration.py  test_rag_lore_dedup.py  test_rag_services.py  (+26 more)
GPT_SoVITS/text/: __init__.py  cantonese.py  chinese.py  chinese2.py  cleaner.py  english.py  japanese.py  korean.py  restr.rep  symbols.py  symbols2.py  tone_sandhi.py
GPT_SoVITS/tools/: generate_live2d_model_json.py
GPT_SoVITS/ui/: file_manager.py
GPT_SoVITS/ui_main/: README.md
GPT_SoVITS/update/: __init__.py  operation_lock.py  update_checker.py  update_downloader.py  update_launcher.py  update_models.py  update_paths.py  update_security.py
docs/: MacOS 软件包安装指南.md  repair-feature-guide.md
docs-site/: feedback.md  index.md  package-lock.json  package.json  wrangler.toml
docs-site/.vitepress/: config.mts
docs-site/dev/: setup.md
docs-site/guide/: feedback.md  live2d.md  llm.md  settings.md  start.md  tts.md  update.md
docs/adr/: 0001-live2d-support-package.md  0002-live2d-v3-preview-extra-motion.md  0003-live2d-runtime-window-recreate.md  0004-live2d-directional-motion-capabilities.md  0005-live2d-model-import-copies-external-references.md  0006-update-result-record-for-detached-updater.md  0007-version-exact-program-resource-repair.md  0008-chat-backup-resource-references.md  0009-separate-character-thought-extraction.md  0010-link-character-thoughts-after-local-extraction.md  (+20 more)
docs/agents/: domain.md
tests/: test_apply_repair.py  test_fake_openai_server.py  test_release_file_selection.py  test_repair_release_tools.py  test_repair_system.py  test_update_system.py  test_verify_modified_file.py
tools/: __init__.py  apply_repair.py  apply_update_patch.py  build_diff_patch.py  fake_openai_server.py  更新工具使用说明.md
(+216 files in other folders)
